--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 		    <canvas id="myCanvas" width="650" height="450">No canvas support</canvas>
 		</div>
 		
+		<div id="button-container">
+		    <button class="button" id='pause'>Start</button>
+		</div>
+		
 		
 		<br><br><br><br><br><hr>
 		<div class="container">
