--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 			
 			</footer>
 		</div>
-		<script type="module" src="resources/js/main.js"></script>		
+		<script type="module" src="resources/js/main2.js"></script>		
     </body>
 </html>
