radio buttons html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 		    <canvas id="myCanvas" width="650" height="450">No canvas support</canvas>
 		</div>
 		
+		<div id="algorithm-buttons">
+		    <input type="radio" value="bubble">
+			<label for="bubble">Bubble</label>
+			<input type="radio" value="select">
+			<label for="select"></label>
+		</div>
+		
 		<div id="button-container">
 		    <button class="button" id='pause'>Start</button>
 		</div>
