--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
 		    <input type="radio" value="bubble">
 			<label for="bubble">Bubble</label>
 			<input type="radio" value="select">
-			<label for="select"></label>
+			<label for="select">Select</label>
 		</div>
+		
+		<div class="wrapper">
+		    <input type="radio" name="select" id="option-1" checked>
+		    <input type="radio" name="select" id="option-2">
+		    <label for="option-1" class="option option-1">
+		        <div class="dot"></div>
+		        <span>Student</span>
+		    </label>
+		    <label for="option-2" class="option option-2">
+		    <div class="dot"></div>
+		    <span>Teacher</span>
+		    </label>
+		    </div>
 		
 		<div id="button-container">
 		    <button class="button" id='pause'>Start</button>
