removed radio buttons, started with adding own custom

--- a/index.html
+++ b/index.html
@@ -16,24 +16,10 @@
 		</div>
 		
 		<div id="algorithm-buttons">
-		    <input type="radio" value="bubble">
-			<label for="bubble">Bubble</label>
-			<input type="radio" value="select">
-			<label for="select">Select</label>
+		    <button class="button" id='bubblesort'>Bubble Sort</button>
+			<button class="button" id='selectionsort'>Selection Sort</button>
 		</div>
 		
-		<div class="wrapper">
-		    <input type="radio" name="select" id="option-1" checked>
-		    <input type="radio" name="select" id="option-2">
-		    <label for="option-1" class="option option-1">
-		        <div class="dot"></div>
-		        <span>Student</span>
-		    </label>
-		    <label for="option-2" class="option option-2">
-		    <div class="dot"></div>
-		    <span>Teacher</span>
-		    </label>
-		    </div>
 		
 		<div id="button-container">
 		    <button class="button" id='pause'>Start</button>
