--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		
 		
 		<div id="button-container">
+		    <button class="button" id="generatearray">Generate Array</button>
 		    <button class="button" id='pause'>Start</button>
 		</div>
 		
