basic delay setup

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 		    <button class="button" id='pause'>Start</button>
 		</div>
 		
+		<div class="slidecontainer">
+           <input type="range" min="100" max="1000" value="300" class="slider" id="delayRange">
+		   <p>Delay: <span id="delayValue"></span> ms</p>
+        </div>
+		
 		
 		<br><br><br><br><br><hr>
 		<div class="container">
