--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 		   <p>Delay: <span id="delayValue"></span> ms</p>
         </div>
 		
+		<div class="slidecontainer">
+           <input type="range" min="5" max="100" value="20" class="slider" id="sizeRange">
+		   <p>Array Size: <span id="sizeValue"></span> ms</p>
+        </div>
+		
 		
 		<br><br><br><br><br><hr>
 		<div class="container">
