--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     	<meta charset="utf-8" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/x-icon" href="/resources/styling/favicon.ico">
     	<link href="resources/css/style.css" type="text/css" rel="stylesheet">
     	<title>Sorting Visualizer</title>
     </head>
