insertion html and js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div id="algorithm-buttons">
 		    <button class="button" id='bubblesort'>Bubble Sort</button>
 			<button class="button" id='selectionsort'>Selection Sort</button>
+			<button class="button" id='insertionsort'>Insertion Sort</button>
 		</div>
 		
 		
