mergeSort Button html and main.js

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		    <button class="button" id='bubblesort'>Bubble Sort</button>
 			<button class="button" id='selectionsort'>Selection Sort</button>
 			<button class="button" id='insertionsort'>Insertion Sort</button>
+			<button class="button" id='mergesort'>Merge Sort</button>
 		</div>
 		
 		
