html/js heap sort button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<button class="button" id='selectionsort'>Selection Sort</button>
 			<button class="button" id='insertionsort'>Insertion Sort</button>
 			<button class="button" id='mergesort'>Merge Sort</button>
+			<button class="button" id='heapsort'>Heap Sort</button>
 		</div>
 		
 		
