basic shell sort

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 		<div id="algorithm-buttons">
 		    <button class="button" id='bubblesort'>Bubble Sort</button>
 			<button class="button" id='selectionsort'>Selection Sort</button>
+			<button class="button" id='shellsort'>Shell Sort</button>
 			<button class="button" id='insertionsort'>Insertion Sort</button>
-			<button class="button" id='mergesort'>Merge Sort</button>
 			<br>
+			<button class="button" id='mergesort'>Merge Sort</button>
 			<button class="button" id='heapsort'>Heap Sort</button>
 		</div>
 		
