--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 		</div>
 		
 		<div class="slidecontainer">
-           <input type="range" min="100" max="1000" value="300" class="slider" id="delayRange">
+           <input type="range" min="1" max="1000" value="300" class="slider" id="delayRange">
 		   <p>Delay: <span id="delayValue"></span> ms</p>
         </div>
 		
 		<div class="slidecontainer">
            <input type="range" min="5" max="100" value="20" class="slider" id="sizeRange">
-		   <p>Array Size: <span id="sizeValue"></span> ms</p>
+		   <p>Array Size: <span id="sizeValue"></span>Elements</p>
         </div>
 		
 		
