--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<br>
 			<button class="button" id='mergesort'>Merge Sort</button>
 			<button class="button" id='heapsort'>Heap Sort</button>
+			<button class="button" id='quicksort'>Quick Sort</button>
 		</div>
 		
 		
