--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 		    <canvas id="myCanvas" width="650" height="450">No canvas support</canvas>
 		</div>
 		
+		<div id="">
+		    <select>
+				<option value="bubblesort">Bubble Sort</option>
+				<option value="selectionsort">Selection Sort</option>
+				<option value="shellsort">Shell Sort</option>
+				<option value="insertionsort">Insertion Sort</option>
+				<option value="mergesort">Merge Sort</option>
+				<option value="heapsort">Heap Sort</option>
+				<option value="quicksort">Quick Sort</option>
+			</select>
+		</div>
+		
 		<div id="algorithm-buttons">
 		    <button class="button" id='bubblesort'>Bubble Sort</button>
 			<button class="button" id='selectionsort'>Selection Sort</button>
