select html name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		
 		<div id="">
-		    <select>
+		    <select name"Algorithms" id="algorithm-menu" class="algorithm-menu">
 				<option value="bubblesort">Bubble Sort</option>
 				<option value="selectionsort">Selection Sort</option>
 				<option value="shellsort">Shell Sort</option>
