--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		    <canvas id="myCanvas" width="650" height="450">No canvas support</canvas>
 		</div>
 		
-		<div id="">
+		<div id="algorithm-menu-div">
 		    <select name"Algorithms" id="algorithm-menu" class="algorithm-menu">
 				<option value="bubblesort">Bubble Sort</option>
 				<option value="selectionsort">Selection Sort</option>
