js for algo select

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		
 		<div id="algorithm-menu-div">
-		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu">
+		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu" onChange="">
 				<option value="bubblesort">Bubble Sort</option>
 				<option value="selectionsort">Selection Sort</option>
 				<option value="shellsort">Shell Sort</option>
