--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		</div>
 		
 		<div id="algorithm-menu-div">
-		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu" onChange="">
-				<option value="bubblesort">Bubble Sort</option>
+		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu">
+				<option value="bubbleSort">Bubble Sort</option>
 				<option value="selectionsort">Selection Sort</option>
 				<option value="shellsort">Shell Sort</option>
 				<option value="insertionsort">Insertion Sort</option>
