js fixes for select button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 		<div id="algorithm-menu-div">
 		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu">
-				<option value="bubbleSort">Bubble Sort</option>
+				<option value="bubblesort">Bubble Sort</option>
 				<option value="selectionsort">Selection Sort</option>
 				<option value="shellsort">Shell Sort</option>
 				<option value="insertionsort">Insertion Sort</option>
