--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		
 		<div id="algorithm-menu-div">
 		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu">
-				<option value="bubblesort">Bubble Sort</option>
-				<option value="selectionsort">Selection Sort</option>
-				<option value="shellsort">Shell Sort</option>
-				<option value="insertionsort">Insertion Sort</option>
-				<option value="mergesort">Merge Sort</option>
-				<option value="heapsort">Heap Sort</option>
-				<option value="quicksort">Quick Sort</option>
+				<option value="bubblesort" class="option">Bubble Sort</option>
+				<option value="selectionsort" class="option">Selection Sort</option>
+				<option value="shellsort" class="option">Shell Sort</option>
+				<option value="insertionsort" class="option">Insertion Sort</option>
+				<option value="mergesort" class="option">Merge Sort</option>
+				<option value="heapsort" class="option">Heap Sort</option>
+				<option value="quicksort" class="option">Quick Sort</option>
 			</select>
 		</div>
 		
