html option changes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		
 		<div id="button-container">
 		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu">
+			    <option class="algo-menu-option">Algorithm</option>
 				<option value="bubblesort" class="algo-menu-option">Bubble Sort</option>
 				<option value="selectionsort" class="algo-menu-option">Selection Sort</option>
 				<option value="shellsort" class="algo-menu-option">Shell Sort</option>
