testing custom dropdown

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 		
 		
 		<div id="button-container">
+		    <div class="dropdown">
+				<button class="algo-dropbtn algo-displayed">Algorithms</button>
+				<div class="dropdown-content">
+					<button class="algo-dropbtn" id="bubblesort">Bubble Sort</button>
+					<button class="algo-dropbtn"
+				</div>
+			</div>
 		    <select name="Algorithms" id="algorithm-menu" class="algorithm-menu">
 			    <option class="algo-menu-option">Algorithm</option>
 				<option value="bubblesort" class="algo-menu-option">Bubble Sort</option>
