testing color picker

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 		   <p>Array Size: <span id="sizeValue"></span> Elements</p>
         </div>
 		
+		<div class="colorcontainers">
+			<input type="color" id="compare" color="#89FB92" >
+		</div>
+		
 		
 		<br><br><br><br><br><hr>
 		<div class="container">
