value instead of color

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 		
 		<div class="colorcontainers">
-			<input type="color" id="compare" color="#89FB92" >
+			<input type="color" id="compare" value="#89FB92" >
 		</div>
 		
 		
