more color selectors

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 		
 		<div class="colorcontainers">
 			<input type="color" id="compare" value="#89FB92" >
+			<input type="color" id="swap" value="#CE050F" >
+			<input type="color" id="tertiary" value="#FFFF66" >
+			<input type="color" id="arrayfocus" value="#343A40" >
+			<input type="color" id="array" value="#B4B4B4" >
 		</div>
 		
 		
