unpluralized class name

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		   <p>Array Size: <span id="sizeValue"></span> Elements</p>
         </div>
 		
-		<div class="colorcontainers">
+		<div class="colorcontainer">
 			<input type="color" id="compare" value="#89FB92" >
 			<input type="color" id="swap" value="#CE050F" >
 			<input type="color" id="tertiary" value="#FFFF66" >
