compare color tests

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         </div>
 		
 		<div class="colorcontainer">
-			<input type="color" id="compare" value="#89FB92" >
-			<input type="color" id="swap" value="#CE050F" >
-			<input type="color" id="tertiary" value="#FFFF66" >
-			<input type="color" id="arrayfocus" value="#343A40" >
-			<input type="color" id="array" value="#B4B4B4" >
+			<input type="color" id="compareColour" value="#89FB92" >
+			<input type="color" id="swapColour" value="#CE050F" >
+			<input type="color" id="tertiaryColour" value="#FFFF66" >
+			<input type="color" id="arrayFocusColour" value="#343A40" >
+			<input type="color" id="arrayColour" value="#B4B4B4" >
 		</div>
 		
 		
