basic layout to start implementatin of introsort

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<option value="mergesort" class="algo-menu-option">Merge Sort</option>
 				<option value="heapsort" class="algo-menu-option">Heap Sort</option>
 				<option value="quicksort" class="algo-menu-option">Quick Sort</option>
+				<option value="introsort" class="algo-menu-option">Introspective Sort*</option>
 			</select>
 		    <button class="button" id="generatearray">Generate Array</button>
 		    <button class="button" id='pause'>Start</button>
